--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,13 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
     android:background="?android:selectableItemBackground"
     android:orientation="vertical"
     android:padding="5dp">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        card_view:cardCornerRadius="3dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        card_view:cardElevation="8dp">
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +34,8 @@
                     android:layout_gravity="center_vertical"
                     android:layout_toLeftOf="@+id/btnMore"
                     android:text="Sample title"
-                    android:textColor="@android:color/black"
+                    android:paddingLeft="6dp"
+                    android:textColor="#00695C"
                     android:textSize="18sp" />
 
                 <TextView
@@ -37,11 +44,11 @@
                     android:layout_height="42dp"
                     android:gravity="center"
                     android:textAllCaps="true"
-                    android:padding="5dp"
+                    android:paddingRight="10dp"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:text="more"
+                    android:text="Thêm"
                     android:textColor="#4CAF50" />
             </RelativeLayout>
             <android.support.v7.widget.RecyclerView
