--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group
-        android:checkableBehavior="single">
+        android:checkableBehavior="single"
+        >
 
         <item
-            android:id="@+id/drawer_labels"
+            android:id="@+id/drawer_homes"
+            android:icon="@drawable/home_variant"
             android:title="@string/Home"/>
 
         <item
-            android:id="@+id/drawer_fab"
+            android:id="@+id/drawer_fav"
             android:title="@string/Favourites"/>
 
         <item
-            android:id="@+id/drawer_coordinator"
+            android:id="@+id/drawer_shop"
             android:title="@string/Shopping"/>
 
     </group>
