--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,10 @@
 <resources>
     <color name="primary">#F44336</color>
     <color name="primaryDark">#C62828</color>
-    <color name="window_background">#FFF5F5F5</color>
+    <color name="colorPrimary">#FFC400</color>
+    <color name="colorPrimaryDark">#125688</color>
+    <color name="textColorPrimary">#000000</color>
+    <color name="window_background">#000000</color>
+    <color name="navigationBarColor">#000000</color>
+    <color name="colorAccent">#c8e8ff</color>
 </resources>
