--- a/app/src/main/res/menu/menu_detail_food.xml
+++ b/app/src/main/res/menu/menu_detail_food.xml
@@ -1,10 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.rufflez.myapplication.DetailFoodActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    <item android:id="@+id/action_bookmark"
+        android:icon="@drawable/heart_outline"
+        app:showAsAction="collapseActionView|always"
+        android:layout_width="wrap_content"
+        android:title="Bookmark" />
 </menu>
