--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,18 @@
     <color name="primary">#F44336</color>
     <color name="primaryDark">#C62828</color>
     <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#125688</color>
+    <color name="colorPrimaryDark">#F44336</color>
     <color name="textColorPrimary">#000000</color>
     <color name="window_background">#000000</color>
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#c8e8ff</color>
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="background">#e5e5e5</color>
+    <color name="half_black">#808080</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="pink">#e91e63</color>
+    <color name="pink_pressed">#ec407a</color>
+    <color name="blue_semi_transparent">#805677fc</color>
+    <color name="blue_semi_transparent_pressed">#80738ffe</color>
 </resources>
