--- a/app/src/main/res/layout/activity_cook_today.xml
+++ b/app/src/main/res/layout/activity_cook_today.xml
@@ -17,7 +17,9 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/content_thuc_don"
+        >
 
         <github.chenupt.springindicator.viewpager.ScrollerViewPager
             android:id="@+id/view_pager"
