--- a/app/src/main/res/layout/fragment_cook_today.xml
+++ b/app/src/main/res/layout/fragment_cook_today.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/abc">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
