--- a/app/src/main/res/layout/activity_detail_food.xml
+++ b/app/src/main/res/layout/activity_detail_food.xml
@@ -19,151 +19,8 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:expandedTitleGravity="center|top">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    app:layout_collapseMode="parallax"
-                    android:id="@+id/img"
-                    android:src="@drawable/ga"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_below="@+id/img"
-                    android:background="@color/white"
-                    >
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-                            <LinearLayout
-
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal"
-                                android:weightSum="4">
-                                <LinearLayout
-                                    android:paddingTop="10dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:layout_weight="1">
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/heart_pulse"
-                                        android:layout_gravity="center_horizontal"
-                                        />
-
-                                    <TextView
-                                        android:id="@+id/textView2"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center"
-                                        android:text="701.7"
-                                        android:textColor="@color/colorPrimaryDark" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Calories"
-                                        android:textColor="@color/black_semi_transparent"
-                                        android:layout_gravity="center"/>
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:paddingTop="10dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:layout_weight="1"
-                                    >
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/human_handsup"
-                                        android:layout_gravity="center_horizontal"
-                                        />
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="3"
-                                        android:textColor="@color/colorPrimaryDark"
-                                        android:layout_gravity="center"/>
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Khẩu phần"
-                                        android:textColor="@color/black_semi_transparent"
-                                        android:layout_gravity="center"/>
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:paddingTop="10dp"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:layout_weight="1">
-                                    <ImageView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:background="@drawable/clock"
-                                        android:layout_gravity="center_horizontal"
-                                        />
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="30p"
-                                        android:textColor="@color/colorPrimaryDark"
-                                        android:layout_gravity="center"/>
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="Thời gian"
-                                        android:textColor="@color/black_semi_transparent"
-                                        android:layout_gravity="center"/>
-                                </LinearLayout>
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="vertical"
-                                    android:layout_weight="1">
-                                    <RelativeLayout
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent"
-                                        android:layout_gravity="top|center_horizontal">
-                                        <ImageView
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:background="@drawable/bookmark"
-                                            android:layout_gravity="top|center_vertical"
-                                            />
-                                        <ImageView
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:background="@drawable/heart_outline"
-                                            android:layout_centerHorizontal="true"
-                                            android:id="@+id/book_mark"
-                                            android:layout_centerInParent="true"/>
-                                    </RelativeLayout>
-                                </LinearLayout>
-
-                            </LinearLayout>
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:padding="6dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="#000000"
-                        android:text="  Trong những món ăn chế biến từ thịt gà thì món gà rán mật ong có lẽ là món ăn hấp dẫn được nhiều người nhất. Mùi thơm ngọt của mật ong, quyện tan vào miếng gà vàng rụm, giòn tan chắc chắn sẽ chinh phục bạn hoàn toàn."/>
-
-                </LinearLayout>
-            </RelativeLayout>
+            app:expandedTitleGravity="center|top"
+            android:background="@drawable/ga">
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_detail"
                 android:layout_width="match_parent"
@@ -175,27 +32,6 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/content_detail_food" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:id="@+id/linear"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs_detail_food"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabGravity="fill"/>
-        <android.support.v4.view.ViewPager
-            android:id="@+id/container_detail_food"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
