--- a/app/src/main/res/layout/activity_detail_food.xml
+++ b/app/src/main/res/layout/activity_detail_food.xml
@@ -10,6 +10,7 @@
         android:id="@+id/appbar_detail_food"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="10dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -42,10 +43,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bean"
+                    android:text="Gà rán mật ong"
                     android:textColor="@color/white"
                     android:id="@+id/toolbar_title"
-                    android:textSize="25sp"/>
+                    android:textSize="24sp"
+                    app:elevation="10dp"/>
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
