--- a/app/src/main/res/layout/content_detail_food.xml
+++ b/app/src/main/res/layout/content_detail_food.xml
@@ -8,18 +8,11 @@ android:id="@+id/nestedScroolView"
 android:fillViewport="true"
 tools:showIn="@layout/activity_detail_food"
 app:layout_behavior="@string/appbar_scrolling_view_behavior">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -151,19 +144,33 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                     android:text="  Trong những món ăn chế biến từ thịt gà thì món gà rán mật ong có lẽ là món ăn hấp dẫn được nhiều người nhất. Mùi thơm ngọt của mật ong, quyện tan vào miếng gà vàng rụm, giòn tan chắc chắn sẽ chinh phục bạn hoàn toàn."/>
 
             </LinearLayout>
-        </RelativeLayout>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs_detail_food"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp">
+            <LinearLayout android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="800dp"
+                    android:orientation="vertical">
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/container_detail_food"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:nestedScrollingEnabled="true"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs_detail_food"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:tabGravity="fill"/>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp">
-        <include layout="@layout/content"/>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
 </android.support.v4.widget.NestedScrollView>
