--- a/app/src/main/res/drawable-mdpi/shape3.xml
+++ b/app/src/main/res/drawable-mdpi/shape3.xml
@@ -9,18 +9,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#edefef" >
+        android:color="#ded6d6" >
     </stroke>
-
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="10dp"    >
-    </padding>
-
-    <corners
-        android:radius="4dp"   >
-    </corners>
-
 </shape>
