--- a/app/src/main/res/layout/activity_detail_food.xml
+++ b/app/src/main/res/layout/activity_detail_food.xml
@@ -9,7 +9,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_detail_food"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         app:elevation="10dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
@@ -17,7 +17,6 @@
             android:id="@+id/collapsing_toolbar_detail_food"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
@@ -26,33 +25,33 @@
             <ImageView
                 android:id="@+id/header"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/ga"
-                android:fitsSystemWindows="true"
+                android:layout_height="250dp"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                android:src="@drawable/ga"
+                app:layout_collapseMode="pin" />
             <android.support.v7.widget.Toolbar
                 android:alpha="100"
                 android:id="@+id/toolbar_detail"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:popupTheme="@style/MyMaterialTheme.PopupOverlay"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
                 app:layout_collapseMode="pin"
                 >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Gà rán mật ong"
-                    android:textColor="@color/white"
-                    android:id="@+id/toolbar_title"
-                    android:textSize="24sp"
-                    app:elevation="10dp"/>
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
     <!--<include layout="@layout/content_detail_food" />-->
     <include layout="@layout/content_detail_food"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_anchor="@id/appbar_detail_food"
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@drawable/heart_outline" />
 
 </android.support.design.widget.CoordinatorLayout>
