--- a/app/src/main/res/layout/activity_splash_sreen.xml
+++ b/app/src/main/res/layout/activity_splash_sreen.xml
@@ -5,18 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".SplashScreen">
+    tools:context="com.example.rufflez.Cookbook.SplashScreen">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Welcome To"
         android:textSize="40sp"
-<<<<<<< HEAD
-        android:textColor="#ecdfad"
-=======
-        android:textColor="@color/colorAccent"
->>>>>>> b531bf41306e305fbb4f182bedbbad6fb65e772b
+        android:textColor="@color/md_cyan_100"
         android:fontFamily="casual"
         android:layout_marginTop="70dp"
         />
@@ -32,17 +28,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-
         android:layout_marginBottom="50dp"
         android:id="@+id/progressBar" />
 
     <TextView
         android:textSize="20sp"
-<<<<<<< HEAD
-        android:textColor="#ecdfad"
-=======
-        android:textColor="@color/colorAccent"
->>>>>>> b531bf41306e305fbb4f182bedbbad6fb65e772b
         android:text="TextView"
         android:fontFamily="casual"
         android:layout_width="wrap_content"
