--- a/app/src/main/res/layout/content_detail_food.xml
+++ b/app/src/main/res/layout/content_detail_food.xml
@@ -3,157 +3,194 @@ xmlns:tools="http://schemas.android.com/tools"
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".DetailFoodActivity"
+tools:context="com.example.rufflez.Cookbook.DetailFoodActivity"
 android:id="@+id/nestedScroolView"
-android:fillViewport="true"
 tools:showIn="@layout/activity_detail_food"
 app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        >
         <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:background="@color/white"
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="150dp"
+                    android:orientation="vertical"
+                    android:background="@color/colorPrimary">
                     <LinearLayout
-
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_margin = "10dp">
+                        <TextView
+                            android:paddingTop="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/toolbar_title"
+                            android:text="Gà rán mật ong"
+                            android:paddingBottom="5dp"
+                            android:fontFamily="sans-serif-condensed"
+                            android:textSize="16sp"
+                            android:textColor="@color/white"
+                            />
+                        <TextView
+                            android:id="@+id/txt_name_food"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="10dp"
+                            android:paddingTop="8dp"
+                            android:textSize="10dp"
+                            android:fontFamily="sans-serif"
+                            android:text="Món ăn chính"
+                            android:textAllCaps="true"
+                            android:textColor="@color/white"
+                            android:textStyle="bold" />
+                        <View
+                            android:layout_width="match_parent"
+                            android:background="@color/white"
+                            android:layout_height="1dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal"
-                        android:weightSum="4">
+                        >
                         <LinearLayout
-                            android:paddingTop="10dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_weight="1">
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:background="@drawable/heart_pulse"
-                                android:layout_gravity="center_horizontal"
-                                />
-
-                            <TextView
-                                android:id="@+id/textView2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:text="701.7"
-                                android:textColor="@color/colorPrimaryDark" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Calories"
-                                android:textColor="@color/black_semi_transparent"
-                                android:layout_gravity="center"/>
-                        </LinearLayout>
-                        <LinearLayout
-                            android:paddingTop="10dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
                             android:layout_weight="1"
-                            >
+                            android:weightSum="4">
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/human_handsup"
-                                android:layout_gravity="center_horizontal"
+                                android:src="@drawable/food_variant"
+                                android:layout_gravity="center"
+                                android:layout_weight="2"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="abc"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:gravity="center"
                                 />
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="3"
-                                android:textColor="@color/colorPrimaryDark"
-                                android:layout_gravity="center"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Khẩu phần"
-                                android:textColor="@color/black_semi_transparent"
-                                android:layout_gravity="center"/>
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="15dp"
+                                android:textStyle="bold"
+                                android:text="2 people"/>
                         </LinearLayout>
                         <LinearLayout
-                            android:paddingTop="10dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:layout_weight="1">
+                            android:layout_weight="1"
+                            android:weightSum="4">
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/clock"
-                                android:layout_gravity="center_horizontal"
+                                android:src="@drawable/food_variant"
+                                android:layout_gravity="center"
+                                android:layout_weight="2"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="abc"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:gravity="center"
                                 />
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="30p"
-                                android:textColor="@color/colorPrimaryDark"
-                                android:layout_gravity="center"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Thời gian"
-                                android:textColor="@color/black_semi_transparent"
-                                android:layout_gravity="center"/>
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="15dp"
+                                android:textStyle="bold"
+                                android:text="2 people"/>
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:orientation="vertical"
-                            android:layout_weight="1">
-                            <RelativeLayout
+                            android:layout_weight="1"
+                            android:weightSum="4">
+                            <ImageView
                                 android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="top|center_horizontal">
-                                <ImageView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:background="@drawable/bookmark"
-                                    android:layout_gravity="top|center_vertical"
-                                    />
-                                <ImageView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:background="@drawable/heart_outline"
-                                    android:layout_centerHorizontal="true"
-                                    android:id="@+id/book_mark"
-                                    android:layout_centerInParent="true"/>
-                            </RelativeLayout>
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/food_variant"
+                                android:layout_gravity="center"
+                                android:layout_weight="2"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="abc"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                />
+                            <TextView
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="15dp"
+                                android:textStyle="bold"
+                                android:text="2 people"/>
                         </LinearLayout>
-
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:weightSum="4">
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/food_variant"
+                                android:layout_gravity="center"
+                                android:layout_weight="2"/>
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="abc"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                />
+                            <TextView
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="15dp"
+                                android:textStyle="bold"
+                                android:text="2 people"/>
+                        </LinearLayout>
                     </LinearLayout>
-
                 </LinearLayout>
-
-                <TextView
-                    android:padding="6dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#000000"
-                    android:text="  Trong những món ăn chế biến từ thịt gà thì món gà rán mật ong có lẽ là món ăn hấp dẫn được nhiều người nhất. Mùi thơm ngọt của mật ong, quyện tan vào miếng gà vàng rụm, giòn tan chắc chắn sẽ chinh phục bạn hoàn toàn."/>
-
-            </LinearLayout>
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs_detail_food"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="fixed"
-            app:tabGravity="fill"/>
+        </LinearLayout>
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_margin="8dp"
+            android:focusableInTouchMode="false">
             <LinearLayout android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
@@ -162,15 +199,16 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                     android:layout_height="wrap_content"
                     android:minHeight="800dp"
                     android:orientation="vertical">
-                    <android.support.v4.view.ViewPager
-                        android:id="@+id/container_detail_food"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:nestedScrollingEnabled="true"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                        />
+                    <include layout="@layout/fragment_nguyen_lieu"/>
                 </LinearLayout>
             </LinearLayout>
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_margin="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusableInTouchMode="false" >
+            <include layout="@layout/fragment_step"/>
         </android.support.v7.widget.CardView>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
