--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,31 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context="com.example.rufflez.Cookbook.MainActivity"
     tools:showIn="@layout/activity_main"
     android:orientation="vertical">
-<<<<<<< HEAD
-    <ImageView
-        android:layout_margin="6dp"
-        android:elevation="3dp"
-=======
-
-    <ImageView
->>>>>>> b531bf41306e305fbb4f182bedbbad6fb65e772b
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@drawable/background"/>
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-<<<<<<< HEAD
-        android:layout_height="match_parent">
-=======
         android:layout_height="match_parent"
         >
->>>>>>> b531bf41306e305fbb4f182bedbbad6fb65e772b
-
     </FrameLayout>
 
 </LinearLayout>
