--- a/app/src/main/res/layout/item_in_type_food.xml
+++ b/app/src/main/res/layout/item_in_type_food.xml
@@ -19,7 +19,7 @@
             android:id="@+id/card_view"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            card_view:cardCornerRadius="6dp">
+            >
             <LinearLayout
                 android:id="@+id/ln_layout_cardview"
                 android:weightSum="4"
@@ -35,35 +35,38 @@
                     <FrameLayout
                         android:id="@+id/frame_layout_1"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content">
+
                         <ImageView
-                            android:elevation="2dp"
-                            android:layout_margin="1dp"
-                            android:scaleType="centerCrop"
-                            android:layout_gravity="center"
                             android:id="@+id/itemImage"
                             android:layout_width="130dp"
-                            android:layout_height="130dp" />
+                            android:layout_height="150dp"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_margin="1dp"
+                            android:elevation="2dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/background" />
                     </FrameLayout>
 
                 </LinearLayout>
                 <LinearLayout
-                    android:layout_weight="1"
+                    android:layout_weight="0.1"
                     android:orientation="vertical"
-                    android:layout_gravity="left|bottom"
+                    android:layout_gravity="center_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:layout_marginStart="1dp"
                         android:layout_marginBottom="6dp"
-                        android:textAlignment="center"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/tvTitle"
-                        android:textColor="@color/colorPrimaryDark2"
+                        android:textColor="@color/bb_inActiveBottomBarItemColor"
                         android:textStyle="bold"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
+                        android:layout_marginLeft="5dp"
+                        android:text="abc"
+                        android:layout_gravity="left"
                         android:layout_marginTop="6dp"
                         android:paddingEnd="6dp"/>
 
