--- a/app/src/main/res/drawable-mdpi/gradient.xml
+++ b/app/src/main/res/drawable-mdpi/gradient.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#2d2d2d"
-                android:endColor="#00aeaeae"
+                android:startColor="#00aeaeae"
+                android:endColor="#a39e9e"
                 android:type="linear" />
         </shape>
     </item>
