--- a/app/src/main/res/layout/content_detail_food.xml
+++ b/app/src/main/res/layout/content_detail_food.xml
@@ -40,7 +40,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                             android:textColor="@color/white"
                             />
                         <TextView
-                            android:id="@+id/txt_name_food"
+                            android:id="@+id/txt_name_type_food"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingBottom="8dp"
