--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="textColorPrimary">#000000</color>
     <color name="window_background">#000000</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#808080</color>
+    <color name="colorAccent">#FDBC7D</color>
     <color name="black_semi_transparent">#B2000000</color>
     <color name="background">#e5e5e5</color>
     <color name="half_black">#808080</color>
