--- a/app/src/main/res/layout/content_detail_food.xml
+++ b/app/src/main/res/layout/content_detail_food.xml
@@ -40,7 +40,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                             android:textColor="@color/white"
                             />
                         <TextView
-                            android:id="@+id/txt_name_type_food"
+                            android:id="@+id/type_food"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingBottom="8dp"
@@ -78,6 +78,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="4"
+                                android:id="@+id/khau_phan"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
@@ -108,6 +109,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="700"
+                                android:id="@+id/calo"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
@@ -141,6 +143,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="10"
+                                android:id="@+id/so_nguyen_lieu"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
@@ -171,6 +174,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="30"
+                                android:id="@+id/thoi_gian_nau"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
