--- a/app/src/main/res/layout/item_in_type_food.xml
+++ b/app/src/main/res/layout/item_in_type_food.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:padding="5dp"
+    android:layout_margin="3dp"
+    android:padding="0dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +9,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_marginStart="6dp"
         android:id="@+id/ln_layout_main_food"
         android:orientation="vertical"
         android:weightSum="2"
@@ -18,14 +18,14 @@
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="180dp"
             >
             <LinearLayout
                 android:id="@+id/ln_layout_cardview"
                 android:weightSum="4"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="180dp">
                 <LinearLayout
                     android:layout_weight="3.9"
                     android:orientation="horizontal"
@@ -33,6 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dip">
                     <FrameLayout
+                        android:elevation="10dp"
                         android:id="@+id/frame_layout_1"
                         android:layout_gravity="center_horizontal"
                         android:layout_width="match_parent"
@@ -40,35 +41,60 @@
 
                         <ImageView
                             android:id="@+id/itemImage"
-                            android:layout_width="130dp"
+                            android:layout_width="145dp"
                             android:layout_height="150dp"
                             android:layout_gravity="center_horizontal"
                             android:layout_margin="1dp"
-                            android:elevation="2dp"
                             android:scaleType="centerCrop"
                             android:src="@drawable/background" />
                     </FrameLayout>
 
                 </LinearLayout>
                 <LinearLayout
+                    android:background="#f9f9f8"
                     android:layout_weight="0.1"
                     android:orientation="vertical"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:layout_marginBottom="6dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/tvTitle"
                         android:textColor="@color/bb_inActiveBottomBarItemColor"
+                        android:layout_marginBottom="0dp"
+                        android:layout_width="138dp"
+                        android:layout_height="20dp"
+                        android:id="@+id/tvTitle"
                         android:textStyle="bold"
                         android:textSize="14sp"
                         android:layout_marginLeft="5dp"
-                        android:text="abc"
+                        android:text="Loading.....!!!"
                         android:layout_gravity="left"
                         android:layout_marginTop="6dp"
-                        android:paddingEnd="6dp"/>
+                        android:paddingEnd="0dp"/>
+                    <LinearLayout
+                        android:weightSum="4"
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_marginLeft="6dp"
+                            android:foregroundGravity="left"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/clock_fast_black"
+                            android:layout_gravity="left"
+                            android:layout_weight="1"/>
+                        <TextView
+                            android:id="@+id/item_time"
+                            android:textColor="@color/bb_inActiveBottomBarItemColor"
+                            android:text="30p"
+                            android:layout_marginTop="3dp"
+                            android:layout_marginLeft="5dp"
+                            android:gravity="center_horizontal"
+                            android:layout_weight="3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+
 
                 </LinearLayout>
             </LinearLayout>
