--- a/app/src/main/res/layout/more_item_in_type_food_grid_item.xml
+++ b/app/src/main/res/layout/more_item_in_type_food_grid_item.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout
+    android:paddingLeft="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="10dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?android:selectableItemBackground"
@@ -7,11 +11,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_more_food"
         android:layout_width="110dp"
-        android:layout_height="150dp"
+        android:layout_height="170dp"
         android:elevation="10dp"
         app:cardCornerRadius="5dp"
-        android:layout_margin="10dp">
+        android:layout_margin="2dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -19,25 +24,49 @@
             android:weightSum="3">
             <ImageView
                 android:id="@+id/img_more_food"
-                android:paddingTop="5dp"
+                android:padding="5dp"
                 android:layout_width="100dp"
-                android:layout_height="110dp"
+                android:layout_height="115dp"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
                 android:layout_weight="2"
                 android:src="@drawable/ga" />
-
-
             <TextView
+                android:layout_gravity="start"
+                android:layout_marginTop="2dp"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                android:text="abc"
                 android:id="@+id/tv_name_food"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="5dp"
                 android:layout_weight="1"
-                android:text="Sample title"
-                android:textColor="@android:color/black"
-                android:textSize="16sp" />
+                android:textColor="#747474"
+                android:textSize="14sp" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_marginLeft="5dp"
+                    android:foregroundGravity="left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/clock_fast_black"
+                    android:layout_gravity="start"
+                    android:layout_weight="0"/>
+                <TextView
+                    android:id="@+id/item_time"
+                    android:textColor="#018417"
+                    android:textAlignment="center"
+                    android:layout_gravity="center_horizontal|center"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
